--- a/lab08/prj/TestDriver/TestDriver.cbp
+++ b/lab08/prj/TestDriver/TestDriver.cbp
@@ -2,39 +2,44 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="ModulesPRR" />
+		<Option title="TestDriver" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/ModulesPRR" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="" />
+				<Option output="bin/Debug/TestDriver" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="2" />
+				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/ModulesPRR" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="" />
+				<Option output="bin/Release/TestDriver" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="2" />
+				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option createDefFile="1" />
 				<Compiler>
-					<Add option="-Wall" />
 					<Add option="-O2" />
+					<Add directory="../ModulesPRR" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="../ModulesPRR/bin/Debug/libModulesPRR.a" />
+					<Add directory="../ModulesPRR" />
 				</Linker>
 			</Target>
 		</Build>
-		<Unit filename="ModulesPRR.h" />
+		<Compiler>
+			<Add option="-Wall" />
+			<Add option="-fexceptions" />
+			<Add directory="../ModulesPRR" />
+		</Compiler>
+		<Linker>
+			<Add library="../ModulesPRR/bin/Debug/libModulesPRR.a" />
+			<Add directory="../ModulesPRR" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
