--- a/lab08/prj/PRR_task/PRR_task.cbp
+++ b/lab08/prj/PRR_task/PRR_task.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="TestDriver" />
+		<Option title="PRR_task" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/TestDriver" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/PRR_task" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,18 +16,15 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/TestDriver" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/PRR_task" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="../ModulesPRR" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
-					<Add library="../ModulesPRR/bin/Debug/libModulesPRR.a" />
-					<Add directory="../ModulesPRR" />
 				</Linker>
 			</Target>
 		</Build>
@@ -37,9 +34,6 @@
 			<Add directory="../ModulesPRR" />
 		</Compiler>
 		<Linker>
-			<Add option="-static-libstdc++" />
-			<Add option="-static-libgcc" />
-			<Add option="-static" />
 			<Add library="../ModulesPRR/bin/Debug/libModulesPRR.a" />
 			<Add directory="../ModulesPRR" />
 		</Linker>
